--- a/.gitignore
+++ b/.gitignore
@@ -161,7 +161,7 @@ dmypy.json
 cython_debug/
 
 # prompt
-prompts/system_prompt.py
+prompts/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
